modules/network_hub/firewall.tf
#-------------------------------------------------------------------------------
# AWS Network Firewall configuration
# Fork of: https://github.com/aws-samples/aws-network-firewall-terraform/blob/main/firewall.tf
#-------------------------------------------------------------------------------

locals {
  spoke_vpc_cidrs = toset([for k, v in var.spoke_vpcs : v.cidr])
}

resource "aws_networkfirewall_firewall_policy" "anfw_policy" {
  name = "${local.id}-firewall-policy"
  firewall_policy {
    stateless_default_actions          = ["aws:forward_to_sfe"]
    stateless_fragment_default_actions = ["aws:forward_to_sfe"]
    stateless_rule_group_reference {
      priority     = 20
      resource_arn = aws_networkfirewall_rule_group.drop_icmp.arn
    }
    stateful_rule_group_reference {
      resource_arn = aws_networkfirewall_rule_group.block_domains.arn
    }
    stateful_rule_group_reference {
      resource_arn = aws_networkfirewall_rule_group.block_public_dns_resolvers.arn
    }
    stateful_rule_group_reference {
      resource_arn = aws_networkfirewall_rule_group.drop_non_http_between_vpcs.arn
    }
  }
}

resource "aws_networkfirewall_rule_group" "drop_icmp" {
  capacity = 1
  name     = "${local.id}-drop-icmp"
  type     = "STATELESS"
  rule_group {
    rules_source {
      stateless_rules_and_custom_actions {
        stateless_rule {
          priority = 1
          rule_definition {
            actions = ["aws:drop"]
            match_attributes {
              protocols = [1]
              source {
                address_definition = "0.0.0.0/0"
              }
              destination {
                address_definition = "0.0.0.0/0"
              }
            }
          }
        }
      }
    }
  }
}

resource "aws_networkfirewall_rule_group" "drop_non_http_between_vpcs" {
  capacity = 100
  name     = "${local.id}-drop-non-http-between-vpcs"
  type     = "STATEFUL"
  rule_group {
    rule_variables {
      ip_sets {
        key = "SPOKE_VPCS"
        ip_set {
          definition = local.spoke_vpc_cidrs
        }
      }
    }
    rules_source {
      rules_string = <<EOF
      drop tcp $SPOKE_VPCS any <> $SPOKE_VPCS any (msg:"Blocked TCP that is not HTTP"; flow:established; app-layer-protocol:!http; sid:100; rev:1;)
      drop ip $SPOKE_VPCS any <> $SPOKE_VPCS any (msg: "Block non-TCP traffic."; ip_proto:!TCP;sid:200; rev:1;)
      EOF
    }
  }
}

resource "aws_networkfirewall_rule_group" "block_public_dns_resolvers" {
  capacity = 1
  name     = "${local.id}-block-public-dns"
  type     = "STATEFUL"
  rule_group {
    rules_source {
      stateful_rule {
        action = "DROP"
        header {
          destination      = "ANY"
          destination_port = "ANY"
          direction        = "ANY"
          protocol         = "DNS"
          source           = "ANY"
          source_port      = "ANY"
        }
        rule_option {
          keyword  = "sid"
          settings = ["50"]
        }
      }
    }
  }
}

resource "aws_networkfirewall_rule_group" "block_domains" {
  capacity = 1000
  name     = "${local.id}-block-domains"
  type     = "STATEFUL"
  rule_group {
    rule_variables {
      ip_sets {
        key = "HOME_NET"
        ip_set {
          definition = local.spoke_vpc_cidrs
        }
      }
    }
    rules_source {
      rules_source_list {
        generated_rules_type = "DENYLIST"
        target_types         = ["HTTP_HOST", "TLS_SNI"]
        targets              = [".facebook.com", ".twitter.com"]
      }
    }
  }

}


resource "aws_networkfirewall_firewall" "hub_vpc_anfw" {
  name                = "${local.id}-network-firewall"
  firewall_policy_arn = aws_networkfirewall_firewall_policy.anfw_policy.arn
  vpc_id              = aws_vpc.hub_vpc.id

  dynamic "subnet_mapping" {
    for_each = aws_subnet.hub_vpc_firewall_subnet[*].id

    content {
      subnet_id = subnet_mapping.value
    }
  }

}

resource "aws_cloudwatch_log_group" "anfw_alert_log_group" {
  name = "/aws/${local.id}-network-firewall/alert"
}

module "anfw_flow_bucket" {
  source = "../s3_bucket"

  bucket_name_suffix = "${local.id}-firewall-log"

  enable_archive = true

  tags = local.tags
}

resource "aws_networkfirewall_logging_configuration" "anfw_alert_logging_configuration" {
  firewall_arn = aws_networkfirewall_firewall.hub_vpc_anfw.arn
  logging_configuration {
    log_destination_config {
      log_destination = {
        logGroup = aws_cloudwatch_log_group.anfw_alert_log_group.name
      }
      log_destination_type = "CloudWatchLogs"
      log_type             = "ALERT"
    }
    log_destination_config {
      log_destination = {
        bucketName = module.anfw_flow_bucket.s3_bucket_id
      }
      log_destination_type = "S3"
      log_type             = "FLOW"
    }
  }
}
